c/examples/writing-a-c-compiler-tests/tests/chapter_8/valid/do_while_break_immediate.c
int main(void) {
    int a = 10;
    do
        break;
    while ((a = 1));
    return a;
}
