c/examples/writing-a-c-compiler-tests/tests/chapter_8/invalid_parse/do_missing_semicolon.c
int main(void) {
    do {
        4;
    } while(1)
    return 0;
}